--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@linusborg/vue-simple-portal": "^0.1.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
