--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.8.8",
     "colord": "^2.9.2",
     "core-js": "^3.6.5",
+    "fitty": "^2.3.6",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
