--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "colord": "^2.9.2",
     "core-js": "^3.6.5",
     "fitty": "^2.3.6",
+    "lzutf8": "^0.6.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
