--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.8",
+    "byte-base64": "^1.1.0",
     "colord": "^2.9.2",
     "core-js": "^3.6.5",
     "fitty": "^2.3.6",
     "lzutf8": "^0.6.0",
+    "msgpack-lite": "^0.1.26",
+    "pako": "^2.0.4",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
@@ -21,6 +24,8 @@
   },
   "devDependencies": {
     "@linusborg/vue-simple-portal": "^0.1.5",
+    "@types/msgpack-lite": "^0.1.8",
+    "@types/pako": "^1.0.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
